gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/deprecateopdot.d
version https://git-lfs.github.com/spec/v1
oid sha256:a399db64ef7f5a6e5a57cdaafcc7454deaf6c66633edcc39288fa8c254a0556b
size 481
